fix button on small screens

--- a/src/components/global/header/header.module.scss
+++ b/src/components/global/header/header.module.scss
@@ -31,3 +31,17 @@
 		padding: 0.6rem 1.2rem;
 	}
 }
+
+@media screen and (max-width: 475px) {
+	.buttonContainer {
+		top: 10px;
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+
+	.button {
+		padding: 0.4rem 1rem;
+		font-size: 14px;
+		margin-right: 5px;
+	}
+}
